--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -177,7 +177,7 @@
                         <input type="date" id="fechaEstimadaFin" name="fechaEstimadaFin" />
                         <br />
                         <label id="labelMotivoSuspension">Motivo de suspensión:</label>
-                        <select id="motivo">
+                        <select id="motivo" name="motivo">
                             <option value="faltaMaterial">Falta de material</option>
                             <option value="faltaPersonal">Falta de personal</option>
                             <option value="faltaHerramientas">Falta de herramientas</option>
