--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -11,7 +11,7 @@
     <h2>Pedidos de trabajo</h2>
     <hr />
     <h3>Datos del solicitante</h3>
-    <dl class="row">          
+    <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.IP_Solicitante)
         </dt>
@@ -35,7 +35,7 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PedidoTrabajo.Apellido_Solicitante)
-        </dd>        
+        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.DNI_Solicitante)
         </dt>
@@ -67,21 +67,21 @@
             @Html.DisplayFor(model => model.PedidoTrabajo.Dependencia_Interna.Descripcion_Dependencia)
         </dd>
     </dl>
-    <hr/>
-    <h3>Datos del Trabajo</h3>        
+    <hr />
+    <h3>Datos del Trabajo</h3>
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.Fecha_Subida)
-        </dt>        
+        </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PedidoTrabajo.Fecha_Subida)
-        </dd>      
+        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.ID_Tarea_Fk)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PedidoTrabajo.Tarea.Descripcion_Tarea)
-        </dd>   
+        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.Piso_Oficina_PT)
         </dt>
@@ -109,7 +109,7 @@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.ID_Estado_Fk)
         </dt>
-        <dd class="col-sm-10">                      
+        <dd class="col-sm-10">
             <select asp-for="PedidoTrabajo.ID_Estado_Fk"
                     asp-items="Model.Estado.Select(d=> new SelectListItem
                                 {
@@ -129,7 +129,7 @@
                     <div class="modal-header">
                         <h5 class="modal-title" id="FinModalLabel">Finalizar pedido de trabajo</h5>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body">                        
                         <label id="labelFechaFinalizado">Fecha de finalización:</label>
                         <input type="date" id="fechaFinalizacion" disabled />
                         <input type="hidden" name="OrdenTrabajoId" value="@Model.PedidoTrabajo.ID_Orden_Trabajo_Pk" />
@@ -138,7 +138,7 @@
                         <button type="button" class="btn btn-secondary" id="cancelaAsignacion" data-dismiss="modal">Cancelar</button>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
                     </div>
-                </form>                
+                </form>
             </div>
         </div>
     </div><!-- VENTANA MODAL DE ESTADO FINALIZADO -->
@@ -152,6 +152,10 @@
                     <div class="modal-body">
                         <label id="labelFechaFinalizado">Fecha de cancelacion:</label>
                         <input type="date" id="fechaCan" disabled />
+                        <br/>
+                        <label id="labelDetalleCancelado">Detalle de la cancelacion:</label>
+                        <br />
+                        <textarea id="motivoCancelacion" name="motivoCancelacion"></textarea>
                         <input type="hidden" name="OrdenTrabajoId" value="@Model.PedidoTrabajo.ID_Orden_Trabajo_Pk" />
                     </div>
                     <div class="modal-footer">
@@ -173,7 +177,7 @@
                         <label id="labelFechaInicioSuspension">Fecha inicio de la suspensión:</label>
                         <input type="date" id="fechaInicioSuspendido" disabled />
                         <label id="labelFechaSuspension">Fecha estimada de retomo de trabajo:</label>
-                        <br/>
+                        <br />
                         <input type="date" id="fechaEstimadaFin" name="fechaEstimadaFin" />
                         <br />
                         <label id="labelMotivoSuspension">Motivo de suspensión:</label>
@@ -223,7 +227,7 @@
                     </div>
                     <div class="modal-body">
                         <span id="warningMessagePen" class="alert alert-warning" style="display:none;">
-                        ⚠️ <b>Advertencia</b>: Cambiar cualquier estado a <b>PENDIENTE</b> modificará los datos previamente registrados en otros estados.
+                            ⚠️ <b>Advertencia</b>: Cambiar cualquier estado a <b>PENDIENTE</b> modificará los datos previamente registrados en otros estados.
                         </span>
                         <input type="hidden" name="OrdenTrabajoId" value="@Model.PedidoTrabajo.ID_Orden_Trabajo_Pk" />
                     </div>
@@ -235,45 +239,42 @@
             </div>
         </div>
     </div><!-- VENTANA MODAL DE ESTADO PENDIENTE -->
-    
-    <div>
-    <a asp-page="./Index">Back to List</a>
-</div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>
-    $(document).ready(function () {        
-        function getTodayDate() {
-            var today = new Date();
-            var day = ("0" + today.getDate()).slice(-2);
-            var month = ("0" + (today.getMonth() + 1)).slice(-2);
-            var year = today.getFullYear();
-            return year + "-" + month + "-" + day;
-        }
 
-        $('#deptSelect').change(function (){
-            var selectedOption = $(this).val();
-            if (selectedOption == 1002) {
-                $('#ModalEstPen').modal('show');                
+    <div>
+        <a asp-page="./Index">Back to List</a>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            function getTodayDate() {
+                var today = new Date();
+                var day = ("0" + today.getDate()).slice(-2);
+                var month = ("0" + (today.getMonth() + 1)).slice(-2);
+                var year = today.getFullYear();
+                return year + "-" + month + "-" + day;
             }
-            if (selectedOption == 1003) {
-                $('#ModalEstPro').modal('show');                
-            }
-            
-            if (selectedOption == 1004) 
-            {
-                $('#ModalEstFin').modal('show');
-                $('#fechaFinalizacion').val(getTodayDate());
-            }
-            if (selectedOption == 1005) 
-            {
-                $('#ModalEstSus').modal('show');
-                $('#fechaInicioSuspendido').val(getTodayDate());
-            }  
-            if (selectedOption == 1006) 
-            {
-                $('#ModalEstCan').modal('show');
-                $('#fechaCan').val(getTodayDate());
-            }  
+
+            $('#deptSelect').change(function () {
+                var selectedOption = $(this).val();
+                if (selectedOption == 1002) {
+                    $('#ModalEstPen').modal('show');
+                }
+                if (selectedOption == 1003) {
+                    $('#ModalEstPro').modal('show');
+                }
+
+                if (selectedOption == 1004) {
+                    $('#ModalEstFin').modal('show');
+                    $('#fechaFinalizacion').val(getTodayDate());
+                }
+                if (selectedOption == 1005) {
+                    $('#ModalEstSus').modal('show');
+                    $('#fechaInicioSuspendido').val(getTodayDate());
+                }
+                if (selectedOption == 1006) {
+                    $('#ModalEstCan').modal('show');
+                    $('#fechaCan').val(getTodayDate());
+                }
+            });
         });
-    });
-</script>
+    </script>
